--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,12 @@ version: '3'
 services:
 
   kong-database:
-    image: cassandra:latest
+    image: postgres
+    environment:
+      POSTGRES_USER: "kong"
+      POSTGRES_DB: "kong"
     ports:
-      - "9042:9042"
+      - "5432:5432"
 
   db-migration:
     image: kong:latest
@@ -13,8 +16,8 @@ services:
     links:
       - kong-database:kong-database
     environment:
-      KONG_DATABASE: "cassandra"
-      KONG_CASSANDRA_CONTACT_POINTS: "kong-database"
+      KONG_DATABASE: "postgres"
+      KONG_PG_HOST: "kong-database"
     depends_on:
       - kong-database
 
@@ -24,7 +27,7 @@ services:
       - kong-database:kong-database
     environment:
       KONG_DATABASE: "cassandra"
-      KONG_CASSANDRA_CONTACT_POINTS: "kong-database"
+      KONG_PG_HOST: "kong-database"
       KONG_PROXY_ACCESS_LOG: "/dev/stdout"
       KONG_ADMIN_ACCESS_LOG: "/dev/stdout"
       KONG_PROXY_ERROR_LOG: "/dev/stderr"
