--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
     links:
       - kong-database:kong-database
     environment:
-      KONG_DATABASE: "cassandra"
+      KONG_DATABASE: "postgres"
       KONG_PG_HOST: "kong-database"
       KONG_PROXY_ACCESS_LOG: "/dev/stdout"
       KONG_ADMIN_ACCESS_LOG: "/dev/stdout"
